Fix: Remove buggy stretch to page body height styling.

--- a/kalail/static/css/styles.css
+++ b/kalail/static/css/styles.css
@@ -6,14 +6,14 @@ html
 body
 {
 	margin: 0% 0% 0% 0%;
-	height: 100%;
+	height: auto;
 	font-family:"Helvetica", "Arial", sans-serif;
 	background-color: rgb(14,14,14);
 }
 
 #body_centered
 {
-	height: 100%;
+	height: auto;
 	width: 900px;
 	margin: 0% auto 0%;
 	background-image: url("img/background_tile.png");
